# Sylinteri

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  report.json
score-sample/: score_sample.json
src/: ProjectName.h  googletest.rs  main.cpp  main.rs  postman.hpp  project_name.h  report.hpp  score.hpp  shared.hpp  test.hpp  test_suite.hpp
